[project]
name = "msf-vision-fine-tuning-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# 本番で必要な依存
dependencies = [
  "httpx>=0.28.1",
  "requests>=2.32.5",
]

# ─────────────────────────────────────────────
# 開発用の依存（dev / lint / test など）
# ─────────────────────────────────────────────
[dependency-groups]
dev = [
    "azure-identity>=1.25.1",
    "azure-mgmt-cognitiveservices>=14.1.0",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]


# （必要になったら増やす例）
# test = [
#   "pytest>=8.0.0",
# ]
# lint = [
#   "ruff>=0.7.0",
# ]

# ─────────────────────────────────────────────
# パッケージのビルドバックエンド
# ─────────────────────────────────────────────
# build-system]
# requires = ["hatchling>=1.25.0"]
# build-backend = "hatchling.build"

# ─────────────────────────────────────────────
# uv のプロジェクト設定
# ─────────────────────────────────────────────
[tool.uv]
# デフォルトで読み込む dependency-groups
# (デフォルトも ["dev"] だが明示しておくとわかりやすい)
default-groups = ["dev"]

# 完全にスクリプト/アプリ用途で「パッケージとしてインストールしない」
# 場合はコメントを外すと、uv がパッケージビルドをスキップしてくれる
# package = false

# ─────────────────────────────────────────────
# Ruff（lint & formatter）
# ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"  # requires-python に合わせる

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────
# pytest 設定
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# ─────────────────────────────────────────────
# mypy 設定（お好みで調整）
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
